@@ -38,3 +38,4 @@ fork.c \
 keyserver.c \
 key.c \
 display.c \
+vecdisplay.c \
