@@ -39,6 +39,7 @@ extern void fork_config(void);
 extern void keyserver_config(void);
 extern void key_config(void);
 extern void display_config(void);
+extern void vecdisplay_config(void);
 
 static void
 fts_guiobj_init(void)
@@ -56,6 +57,7 @@ fts_guiobj_init(void)
   keyserver_config();
   key_config();
   display_config();
+  vecdisplay_config();
 }
 
 fts_module_t guiobj_module = {"guiobj", "standard GUI objects", fts_guiobj_init, 0, 0};
