@@ -22,6 +22,7 @@
 #
 # Authors: Maurizio De Cecco, Francois Dechelle, Enzo Maggi, Norbert Schnell.
 #
+package require data
 
 ## package declaration
 package provide guiobj
